# Flex-SH

./: .flex_sh_history  .gitignore  CONFIG.md  CTRL_C_FIX.md  Cargo.toml  README.md  config.toml  example-config.toml
.claude/: settings.local.json
src/: cli.rs  main.rs
src/builtins/: alias.rs  cd.rs  clear.rs  echo.rs  env.rs  exit.rs  help.rs  history.rs  ls.rs  mod.rs  pwd.rs  which.rs
src/config/: mod.rs  settings.rs
src/core/: executor.rs  executor_tests.rs  history.rs  mod.rs  parser.rs  shell.rs
src/terminal/: colors.rs  events.rs  interface.rs  mod.rs
src/utils/: completion.rs  glob_expand.rs  mod.rs  path.rs
tests/: integration_tests.rs
